--- a/src/components/Stats/index.css
+++ b/src/components/Stats/index.css
@@ -3,7 +3,7 @@
     justify-content: right;
     align-items: center;
     column-gap: 20px;
-    width: auto;
+    flex: 1;
     margin-right: 20px;
 }
 
