--- a/src/components/NFTViewer/index.css
+++ b/src/components/NFTViewer/index.css
@@ -248,9 +248,6 @@
     height: 30px;
     overflow: hidden;
   }
-  .filter_asset_container:hover{
-    border: 2px solid rgba(255, 255, 255, 0.5);
-  }
 
   .filterIcon{
     visibility: hidden;
@@ -407,11 +404,16 @@
     position: relative;
   }
 
+  /* This will apply only if the device supports hover */
+  @media (hover: hover) {
+    .filter_asset_container:hover {
+      border: 2px solid rgba(255, 255, 255, 0.5);
+    }
+  }
+
 
   
   @media (max-width: 768px) {
-
-
     .filter-container {
       /* Adjust the height for mobile if necessary, or any other styles */
       display: none !important;
@@ -461,10 +463,6 @@
       align-items: center;
       flex-direction: row;
       border-bottom: 2px solid #808080;
-    }
-
-    .nft-count-container p{
-      mini: 20px;
     }
 
     .logo-container {
@@ -528,5 +526,18 @@
 
     .viewmodes{
       margin: 0 10px 0 0;
+    }
+
+    .nft-count-container{
+      width: 95px;
+      height: 40px;
+      box-shadow: inset 0 0 10px #381E5A; 
+      border: 3px solid #FFFFFF; /* Add a white border for that classic look */
+      text-shadow: 3px 3px 0 #000; /* Gives the text a more defined, pixelated look */
+      margin: 0 0 0 8px;
+    }
+
+    .nft-count-container p{
+      font-size: 20px;
     }
   }
