--- a/src/components/NFTViewer/index.css
+++ b/src/components/NFTViewer/index.css
@@ -106,7 +106,7 @@
 .viewmodes {
   display: flex;
   column-gap: 5px;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
   margin: 0 0px 0 20px;
   gap: 8px;
@@ -115,12 +115,9 @@
 
 .viewmodes>a{
   height: 20px;
-  /* padding: 1px; */
-  justify-content: center;
   align-items:center;
   display: flex;
   text-decoration: none;
-  
 }
 
 .state-control{
@@ -572,7 +569,7 @@
 
     .logo-container {
       width: auto;
-      margin: 0px 20px;
+      margin: 0
     }
 
 
@@ -625,11 +622,12 @@
     }
 
     .icphats-logo {
-      margin-left:  -20px;
+      margin-left:  0px;
     }
 
     .viewmodes{
       margin: 0 10px 0 0;
+      width: 50px;
     }
 
     .nft-count-container{
@@ -638,7 +636,7 @@
       box-shadow: inset 0 0 10px #381E5A; 
       border: 3px solid #FFFFFF; /* Add a white border for that classic look */
       text-shadow: 3px 3px 0 #000; /* Gives the text a more defined, pixelated look */
-      margin: 0 0 0 8px;
+      margin: 0;
     }
 
     .nft-count-container p{
