--- a/src/pages/landing/index.css
+++ b/src/pages/landing/index.css
@@ -1,29 +1,36 @@
 .Landing {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #22006c;
-    /* background-image: url("../../assets/blank_background_desktop.gif"); Correct path to your GIF */
-}
-
-.Banner {
+    width: 100vw;
     height: 100vh;
-    width: 100vw;
-    background-image: url("../../assets/blank_background_desktop.gif"); /* Correct path to your GIF */
-    background-size: cover;
-    background-position: center; /* Center the background image */
-    display: flex; /* Use Flexbox for easier content alignment */
-    justify-content: center; /* Center children horizontally */
-    align-items: center; /* Center children vertically */
 }
 
-.front-banner {
-    width: 100vw;
+.web-app-container {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 
+      0px 5px 40px rgba(0, 0, 0, 0.3), /* Outer shadow for floating effect */
+      0px -5px 40px rgba(0, 0, 0, 0.3), /* Outer shadow for floating effect */
+      5px 0px 40px rgba(0, 0, 0, 0.3), /* Outer shadow for floating effect */
+      -5px 0px 40px rgba(0, 0, 0, 0.3); /* Outer shadow for floating effect */
+  }
+
+.web-app-content-container {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    border-top: none;
+    border-left: 2px solid #c0c0c0;
+    border-right: 2px solid #c0c0c0;
+    border-bottom: 2px solid #c0c0c0;
 }
 
-.nftBoard{
-    margin: 30px;
-    background-color: rgba(0,0,0,0.7);
-    width: 100%;
+
+@media (max-width: 768px) {
+    .web-app-container{
+        width: 100vw;
+        height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+        margin: 0;
+        box-shadow: none;
+    }
 }
