--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -1,13 +1,69 @@
 .profile-rectangle-container {
   display: flex;
-  width: 170px;
-  margin: 0px 10px 10px 10px;
-  padding: 10px 0px;
+  width: 190px;
+  margin: 1px 1px 20px 10px;
+}
+
+.profile-rectangle-container-logged-in {
+  display: flex;
+  flex-direction: column;
+  width: 190px;
+  margin: 1px 1px 10px 10px;
+  padding: 10px 5px;
+  background: #111;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: 'Half Bold Pixel-7', sans-serif;
+
+}
+
+.profile-rectangle-container-logged-in:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #842481, 
+    #ED1E79, 
+    #29ABE2, 
+    #FBB03B, 
+    #F15A24
+  );
+  position: absolute;
+  top: -0.5px;
+  left: -0.5px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
+  width: calc(100% + 1px);
+  height: calc(100% + 1px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.profile-rectangle-container-logged-in:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: black;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
 
 .button-85 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0.3em 2em;
   width: 170px;
+  height: 30px;
   color: rgb(255, 255, 255);
   background: #111;
   cursor: pointer;
@@ -76,6 +132,29 @@
     background-color: #555; /* Change this to the desired hover background color */
   }
   
-  .button-85:hover:before {
-    opacity: 0.5; /* Adjust the opacity or other properties to ensure visibility */
-  }
+.button-85:hover:before {
+  opacity: 0.5; /* Adjust the opacity or other properties to ensure visibility */
+}
+
+.copiable-text {
+  cursor: pointer;
+  user-select: none; /* Prevent text selection */
+  padding: 10px;
+  border: none; /* Remove any border */
+  outline: none; /* Remove focus outline */
+  display: inline-block;
+  background-color: transparent; /* Ensure background is transparent if needed */
+  font-size: 10px;
+}
+
+/* Optional: Add some hover effect to indicate it's clickable */
+.copiable-text:hover {
+  color: blue; /* Change this to any color you like */
+}
+
+.profile-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
