--- a/src/components/WebAppContent/index.css
+++ b/src/components/WebAppContent/index.css
@@ -421,6 +421,62 @@
     color: #000000;
   }
 
+  .send-now-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* padding: 0.3em 2em; */
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    font-family: 'Half Bold Pixel-7', sans-serif;
+    height: 23px;
+    background-color: #585c8c; /* Background applied to the text */
+    width: 50px;
+    font-family: 'Half Bold Pixel-7', sans-serif;
+  }
+
+  .send-now-container:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #842481, 
+      #ED1E79, 
+      #29ABE2, 
+      #FBB03B, 
+      #F15A24
+    );
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    /* border-radius: 10px; */
+  }
+
+  .send-now-container:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    /* border-radius: 10px; */
+  }
+
   .nft-item {
     width: 200px; /* Adjust width as needed */
     margin: 10px; /* Adjust margin as needed */
