--- a/src/components/Profile/index.css
+++ b/src/components/Profile/index.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   width: 190px;
-  margin: 0 0 20px 10px;
+  margin: 0 0 10px 10px;
   border: 1px solid white;
   padding: 5px;
 }
@@ -130,8 +130,7 @@
   width: auto;
   padding: 30px 0px;
   height: 100px;
-  border: 1px solid white;
-
+  min-width: 100%;
 }
 
 .button-01 {
