--- a/src/styles/nft-app-content.css
+++ b/src/styles/nft-app-content.css
@@ -129,7 +129,7 @@
   width: 200px;
   padding: 0px 10px 0px 10px;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   overflow-y: auto;
 }
 
@@ -165,8 +165,7 @@
   .NFT-Search-Container{
     display: flex;
     height: 50px;
-    padding: 0px 0px;
-    margin: 0 0 20px 10px;
+    margin: 0px 0 10px 10px;
   }
 
   .NFT-search-input {
@@ -175,6 +174,7 @@
     border: 2px solid #808080; /* Bright green border, typical of old monitors */
     color: #0f0; /* Bright green text color */
     width: 190px;
+    height: 30px;
     outline: none; /* Remove the default focus outline */
     padding: 0 10px;
   }
@@ -528,7 +528,6 @@
       width: 110px;
       height: 30px;
       padding: 0px 10px;
-      margin: 0 0 20px 0px;
     }
   
     .NFT-search-input {
